examples/fail/lexer/invalid_float_suffix.bina
// EXPECT_LEXER_ERROR: invalid numeric suffix
fn main() -> int {
    let x = 1.0f65;
    return 0;
}
